tests/invalidTest/test_19.q
# EXPECT Error:type cannot be converted
def uint16 test(){

  sint16 ret1 = 4
  return ret1
  return 0
}

